# src/api/controllers/user.js
@@ -1,9 +1,8 @@
-import User from '../../api/models/user';
-import Company from '../../api/models/company';
+import User from '../models/user';
 import { generateToken } from '../utils/auth';
 import patchUpdates from '../utils/mongoHelper';
-import { CompanyNotFoundError, NotAuthorizedError } from '../errors/knownErrors';
-import { handleUserNames, getFieldFromSmartDbResponse } from '../utils/utils';
+import { NotAuthorizedError } from '../errors/knownErrors';
+import { handleUserNames } from '../utils/utils';
 import {
   handleEntityNotFound,
   handleError,
@@ -11,8 +10,6 @@ import {
   respondWithDeletedMessage,
   respondWithResult,
 } from '../utils/requestHelpers';
-import dbsmart from '../../config/dbsmart';
-import smartQueries from '../utils/sqlQuery';
 
 // Gets a list of users
 export function getUserList(req, res) {
@@ -24,14 +21,9 @@ export function getUserList(req, res) {
 
 // Gets a specific User by id
 export function getUserById(req, res) {
-  const populateQuery = [{
-    path: 'dependents',
-    model: User,
-    select: '_id fullname role',
-  }];
+  const userId = req.swagger.params.id.value;
 
-  return User.findById(req.swagger.params.id.value)
-    .populate(populateQuery)
+  return User.findById(userId)
     .then(handleEntityNotFound())
     .then(respondWithResult(res))
     .catch(handleError(res));
@@ -50,21 +42,8 @@ export function postUserCreate(req, res) {
 export function postUserAuthenticate(req, res) {
   const reqPassword = req.body.password;
   const reqUsername = req.body.username;
-  const appIdentifier = req.body.appIdentifier ? req.body.appIdentifier : 'error';
-  const companyQuery = { appIdentifier: { $regex: appIdentifier } };
-  const newQuery = smartQueries.QUERY_LOGIN.replace('$PARAM1', reqUsername);
-  let loggedUser = {};
-  const mongoPopulateQuery = [{
-    path: '_company',
-    model: Company,
-  }, {
-    path: 'dependents',
-    model: User,
-    select: '_id fullname role',
-  }];
 
   return User.findOne({ username: reqUsername })
-    .populate(mongoPopulateQuery)
     .then((userResult) => {
       if (userResult && userResult.comparePassword(reqPassword)) {
         const genToken = generateToken(userResult);
@@ -77,48 +56,10 @@ export function postUserAuthenticate(req, res) {
           lastname: userResult.lastname,
           fullname: userResult.fullname,
           email: userResult.email,
-          dependents: userResult.dependents,
-          logo: userResult._company ? userResult._company.logo : null,
-          _company: userResult._company ? userResult._company._id : null,
-        };
-        return Promise.resolve(response);
-      }
-      return dbsmart.querySmart(newQuery);
-    })
-    .then((rows) => {
-      if (rows && rows.email) {
-        loggedUser = rows;
-        loggedUser._company = loggedUser.username === 'admin' ? '1' : loggedUser._company;
-        if (loggedUser._company) {
-          const userCompany = { logo: loggedUser.logo, _id: loggedUser._company };
-          return Promise.resolve(userCompany);
-        }
-        return Company.findOne(companyQuery);
-      } else if (rows.length > 0 && getFieldFromSmartDbResponse(rows[0].SENHA) === reqPassword) {
-        loggedUser._id = getFieldFromSmartDbResponse(rows[0].ID);
-        loggedUser.name = getFieldFromSmartDbResponse(rows[0].NOME);
-        loggedUser.role = getFieldFromSmartDbResponse(rows[0].TIPO);
-        return Company.findOne(companyQuery);
-      }
-      return Promise.reject(new NotAuthorizedError());
-    })
-    .then((doc) => {
-      if (doc && doc._id) {
-        loggedUser._company = doc._id;
-        loggedUser.logo = doc.logo;
-        const genToken = generateToken(loggedUser);
-        const response = {
-          _id: loggedUser._id,
-          token: genToken,
-          role: loggedUser.role,
-          fullname: loggedUser.name,
-          email: loggedUser.email,
-          logo: loggedUser.logo,
-          _company: loggedUser._company,
         };
         return respondWithData(res, response);
       }
-      return Promise.reject(new CompanyNotFoundError());
+      return Promise.reject(new NotAuthorizedError());
     })
     .catch(handleError(res));
 }
@@ -147,7 +88,7 @@ export function patchUpdateUser(req, res) {
 export function deleteUserRemove(req, res) {
   return User.findById(req.swagger.params.id.value).exec()
     .then(handleEntityNotFound())
-    .then(entity => entity.remove())
+    .then((entity) => entity.remove())
     .then(respondWithDeletedMessage(res))
     .catch(handleError(res));
 }
